# PathfinderAlgorithm

./: .gitignore  CMakeLists.txt  FPGA.cpp  FPGA.h  README.md  build.sh  main.cpp  pathfinder.cpp  pathfinder.h  viewer.cpp
FPGA_tests/: SlashdotConn.txt  createConnections.ps1  graph8.txt  graph8C.txt  testAllFiles.ps1  testFile.ps1  testconnections.txt  testgraph.txt  vpr422_arch.txt
FPGA_tests/net/: README  alu4.net  apex2.net  apex4.net  bigkey.net  des.net  diffeq.net  dsip.net  elliptic.net  ex1010.net  ex5p.net  frisc.net  misex3.net  pdc.net  s298.net  s38417.net  s38584.1.net  spla.net  tseng.net
FPGA_tests/placed/: alu4.place  apex2.place  apex4.place  bigkey.place  clma.place  des.place  diffeq.place  dsip.place  elliptic.place  ex1010.place  ex5p.place  frisc.place  misex3.place  pdc.place  s298.place  s38417.place  s38584.1.place  seq.place  spla.place  tseng.place
doc/: Circuit Netlist and Placement File Formats.html  FPGA Architecture for the Challenge.html  Sample Placement and Routing.html  The _FPGA Place-and-Route Challenge_.html
src/: FPGA.cpp  FPGA.h  main.cpp  pathfinder.cpp  viewer.cpp
